--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dependencies": {
         "laravel-echo": "^1.5.4",
         "pusher-js": "^4.4.0",
-        "sweetalert2": "^8.13.0"
+        "sweetalert2": "^8.13.0",
+        "vuex": "^3.1.1"
     }
 }
